--- a/Server/.classpath
+++ b/Server/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/Niklas/Downloads/MySQL Java/mysql-connector-java-5.1.28-bin.jar"/>
+	<classpathentry kind="lib" path="C:/Users/stig.AD.000/Downloads/mysql-connector-java-5.1.29-bin.jar"/>
+	<classpathentry kind="lib" path="C:/Users/stig.AD.000/Downloads/jasypt-1.9.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
